--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,13 @@ dependencies {
 	implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.11'
 	//https://mvnrepository.com/artifact/org.json/json
 	implementation 'org.json:json:20210307'
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.3'
+// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-csv
+	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.13.3'
+
+
 }
 
 tasks.named('test') {
