--- a/RIBOflaskapp/package.json
+++ b/RIBOflaskapp/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "file-saver": "^2.0.5",
-    "jquery": "^3.6.1"
+    "jquery": "^3.6.1",
+    "python-shell": "^3.0.1"
   }
 }
