--- a/website_management/package.json
+++ b/website_management/package.json
@@ -4,6 +4,6 @@
   "dependencies": {
     "file-saver": "^2.0.5",
     "jquery": "^3.6.1",
-    "python-shell": "^3.0.1",
+    "python-shell": "^3.0.1"
   }
 }
